k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: hrms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: hrms-app
      labels:
        app: backend
    spec:
      containers:
      - name: hrmsapp-backend
        image: arbajshaikh/hrms-springboot:latest
        ports:
         - containerPort: 8080
