k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: hrms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: hrms-app
      labels:
        app: frontend
    spec:
      containers:
      - name: hrmsapp-frontend
        image: arbajshaikh/hrms-frontend:latest
        ports: 
         - containerPort: 80
