k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hrms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql-pod
      namespace: hrms-app
      labels:
        app: mysql
    spec:
      containers:
      - name: hrmsapp-mysql
        image: mysql:8
        ports: 
         - containerPort: 3306
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
