k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: hrms-app
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
